# gluezilla-templater

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  default-config.ini
cmake/: version.cmake
docs/: Doxyfile.in
include/: bit_flipper.h  config.h  contiguous_flip_finder.h  db.h  dmidecode_parser.h  dram_address.h  dram_layout.h  flip_finder.h  hammer_pattern.h  info.h  logging.h  noncontiguous_flip_finder.h  operators.h  phys_page_finder.h  temperature_controller.h
py/: parse_blacksmith.py  test_all_blacksmith_patterns.py  vis_page_allocation.py
sql/: alter_tables_2.sql  alter_tables_3.sql  create_tables.sql  create_views.sql  tables.vuerd.json
src/: bit_flipper.cpp  config.cpp  contiguous_flip_finder.cpp  db.cpp  dmidecode_parser.cpp  dram_address.cpp  dram_layout.cpp  flip_finder.cpp  hammer_pattern.cpp  info.cpp  noncontiguous_flip_finder.cpp  phys_page_finder.cpp  temperature_controller.cpp  tester.cpp  validator.cpp
